# gl-core

./: .gl_history  Cargo.toml  README.md  input.txt  read_file  source  tpm.rs
examples/: lexer.rs  parser.rs  source.rs  state.rs
examples2/: lexer.rs  o.rs  parser.rs  state.rs
src/: ast.rs  builtins.rs  env.rs  error.rs  lexer.rs  lib.rs  macros.rs  object.rs  parser.rs  position.rs  source.rs  state.rs  token.rs  utils.rs
src/interpreter/: mod.rs
src/lexer/: identifier.rs  lidentifier.rs  lnumber.rs  lpunctuations.rs  lstring.rs  lwhitespace.rs  mod.rs  number.rs  punctuation.rs  string.rs  whitespace.rs
src/object/: boolean.rs  dynlibrary.rs  float.rs  function.rs  function_rust.rs  hashmap.rs  integer.rs  mod.rs  null.rs  ops.rs  string.rs  structrust.rs  types.rs  vector.rs
src/parser/: call.rs  expression.rs  function.rs  hashmap.rs  if_.rs  index.rs  mod.rs  patom.rs  pblock.rs  pcall.rs  pexpression.rs  pfunction.rs  phashmap.rs  pimport.rs  pindex.rs  pinfix.rs  plet.rs  pnumber.rs  pprefix.rs  pproperty.rs  pstatement.rs  ptuple.rs  pvec.rs  statement.rs  vec.rs
tests/: convert_bigint.rs  lexer.rs  opts.rs  parser.rs  state.rs
