# Copyright 2021 the GLanguage authors. All rights reserved. MIT license.

[package]
name = "gl_core"
version = "0.1.0-alpha"
authors = ["JoseCarlosSkar <josecarlosskar@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Um core para interpretação da linguagem de script GLanguage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc_map = "0.1.3"
anyhow = "1.0.38"
downcast-rs = "1.2.0"
num = "0.3.1"
rustyline = "7.1.0"
rustyline-derive = "0.4.0"
