# Copyright 2021 the GLanguage authors. All rights reserved. MIT license.

[package]
name = "gl_core"
version = "0.1.0-alpha"
authors = ["JoseCarlosSkar <josecarlosskar@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Core GLanguage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
lazy_static = "1.4.0"
libloading = "0.7.0"
num = "0.4.0"
regex = "1.4.3"
